--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <div class="subscribe">
         <h4>Subscribe now to get the latest updates!</h4>
-        <form action="forms/notify.php" method="post" role="form" class="php-email-form">
+        <form action="./forms/mail.php" method="post" role="form" class="php-email-form">
           <div class="subscribe-form">
             <input type="email" name="email" required><input type="submit" value="Subscribe">
           </div>
