--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 
       <div class="subscribe">
         <h4>Subscribe now to get the latest updates!</h4>
-        <form action="./forms/mail.php" method="post" role="form" class="php-email-form">
+        <form action="thankyou.html" method="post" role="form" class="php-email-form">
           <div class="subscribe-form">
             <input type="email" name="email" required><input type="submit" value="Subscribe">
           </div>
-          <div class="mt-2">
+          <div class="">
             <div class="loading">Loading</div>
             <div class="error-message"></div>
             <div class="sent-message">Your notification request was sent. Thank you!</div>
